[gd_scene load_steps=4 format=3 uid="uid://djy641lqxosbw"]

[ext_resource type="Script" uid="uid://djvu7a2u15vdm" path="res://scripts/Location_Youyang.gd" id="1_f1306"]
[ext_resource type="Texture2D" uid="uid://dfu6kuveldhhn" path="res://assets/interactive_background.png" id="1_gwpxg"]
[ext_resource type="Texture2D" uid="uid://lbldtgooym3w" path="res://assets/Tujia_culture.png" id="2_f1306"]

[node name="LocationYouyang" type="Node2D"]
script = ExtResource("1_f1306")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(639.5, 362)
scale = Vector2(0.83138, 0.701172)
texture = ExtResource("1_gwpxg")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 359.0
offset_top = 42.0
offset_right = 1036.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 48
text = "Youyang Tujia Culture"

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
offset_left = 118.0
offset_top = 214.0
offset_right = 711.0
offset_bottom = 507.0
theme_override_font_sizes/normal_font_size = 24
text = "Tujia culture is rich with spiritual customs and symbolic rituals that have been passed down for generations. Two of the most well-known traditions are the Sheba Festival and the Hand-Waving Dance (also known as the Baishou Dance). These traditions are performed to honor ancestors and celebrate the harmony between humans and nature.

During major festivals, villagers gather, wear traditional embroidered garments, sing folk songs, and perform ritual dances that recount stories of their history, migration, and connection to the land. These performances are often accompanied by instruments such as the xiao and suona, creating a vibrant, immersive cultural experience.

Marriage ceremonies, ancestor worship, and seasonal agricultural celebrations are deeply tied to Tujia belief systems. Even architectural forms, like stilt houses built along rivers, reflect their adaptive wisdom and communal lifestyle."

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(965, 366)
scale = Vector2(0.433106, 0.401855)
texture = ExtResource("2_f1306")

[node name="ContinueButton" type="Button" parent="."]
offset_left = 914.0
offset_top = 634.0
offset_right = 1046.0
offset_bottom = 680.0
text = "Continue"

[node name="BackButton" type="Button" parent="."]
offset_left = 140.0
offset_top = 629.0
offset_right = 257.0
offset_bottom = 670.0
text = "Back"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
